fix(html): fix spacing on <p>

--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,7 @@ text-center {
 
 .donate-p {
   text-align: center;
+  margin-top: -2em;
 }
 
 .donate-shop {
