--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -225,6 +225,7 @@ text-center {
 
 .donate-p {
   text-align: center;
+  margin-top: -2em;
 }
 
 .donate-shop {
